--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalformatcolorcriteriontype.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalformatcolorcriteriontype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ConditionalFormatColorCriterionType:enum'
     summary: |-
-      <span data-ttu-id="cca2e-101">表示条件格式值的类型。</span><span class="sxs-lookup"><span data-stu-id="cca2e-101">Represents the types of conditional format values.</span></span>
+      表示条件格式的颜色条件的类型。
 
-      <span data-ttu-id="cca2e-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cca2e-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalFormatColorCriterionType
     fullName: Excel.ConditionalFormatColorCriterionType
     langs:
