--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareasupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareasupdatedata.yml
@@ -29,7 +29,7 @@ items:
           - 'excel!Excel.Interfaces.DataValidationUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#format:member'
     summary: |-
-      返回一个 rangeFormat 对象，其中封装了 RangeAreas 对象中的所有区域的字体、填充、边框、对齐方式和其他属性。
+      返回一个 RangeFormat 对象，封装 RangeAreas 对象中所有区域的字体、填充、边框、对齐方式和其他属性。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
