--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartplotareaformatdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartplotareaformatdata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaFormatData#border:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatData#border:member'
     summary: |-
-      表示图表 plotArea 的边框属性。
+      指定图表 plotArea 的边框属性。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
