--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareasupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareasupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData:interface'
-    summary: '<span data-ttu-id="cc139-101">一个用于更新 RangeAreas 对象上的数据的接口，可用于`rangeAreas.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="cc139-101">An interface for updating data on the RangeAreas object, for use in `rangeAreas.set({ ... })`</span></span><!-- --><span data-ttu-id="cc139-102">.</span><span class="sxs-lookup"><span data-stu-id="cc139-102"></span></span>'
+    summary: '一个用于更新 RangeAreas 对象上的数据的接口，可用于`rangeAreas.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeAreasUpdateData
     fullName: Excel.Interfaces.RangeAreasUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.RangeAreasUpdateData#style:member'
   - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#dataValidation:member'
     summary: |-
-      <span data-ttu-id="cc139-103">返回 RangeAreas 中的所有区域的 dataValidation 对象。</span><span class="sxs-lookup"><span data-stu-id="cc139-103">Returns a dataValidation object for all ranges in the RangeAreas.</span></span>
+      返回 RangeAreas 中的所有区域的 dataValidation 对象。
 
-      <span data-ttu-id="cc139-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc139-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataValidation
     fullName: dataValidation
     langs:
@@ -29,9 +29,9 @@ items:
           - 'excel!Excel.Interfaces.DataValidationUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="cc139-105">返回一个 rangeFormat 对象，其中封装了 RangeAreas 对象中的所有区域的字体、填充、边框、对齐方式和其他属性。</span><span class="sxs-lookup"><span data-stu-id="cc139-105">Returns a rangeFormat object, encapsulating the the font, fill, borders, alignment, and other properties for all ranges in the RangeAreas object.</span></span>
+      返回一个 RangeFormat 对象，封装 RangeAreas 对象中所有区域的字体、填充、边框、对齐方式和其他属性。
 
-      <span data-ttu-id="cc139-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc139-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#style:member'
     summary: |-
-      <span data-ttu-id="cc139-107">表示此 RangeAreas 对象中的所有区域的样式。</span><span class="sxs-lookup"><span data-stu-id="cc139-107">Represents the style for all ranges in this RangeAreas object.</span></span> <span data-ttu-id="cc139-108">如果单元格的样式不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="cc139-108">If the styles of the cells are inconsistent, null will be returned.</span></span> <span data-ttu-id="cc139-109">对于自定义样式，将返回样式名称。</span><span class="sxs-lookup"><span data-stu-id="cc139-109">For custom styles, the style name will be returned.</span></span> <span data-ttu-id="cc139-110">对于内置样式，将返回一个表示 BuiltInStyle 枚举中的值的字符串。</span><span class="sxs-lookup"><span data-stu-id="cc139-110">For built-in styles, a string representing a value in the BuiltInStyle enum will be returned.</span></span>
+      表示此 RangeAreas 对象中的所有区域的样式。 如果单元格的样式不一致，则将返回 null。 对于自定义样式，将返回样式名称。 对于内置样式，将返回一个表示 BuiltInStyle 枚举中的值的字符串。
 
-      <span data-ttu-id="cc139-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc139-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
