commit translated contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartdatalabel.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartdatalabel.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartDataLabel#autoText:member'
@@ -43,7 +43,7 @@ items:
       - 'excel!Excel.ChartDataLabel#width:member'
   - uid: 'excel!Excel.ChartDataLabel#autoText:member'
     summary: |-
-      该布尔值表示数据标签是否根据上下文自动生成相应的文本。
+      指定数据标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -100,7 +100,7 @@ items:
           - string
   - uid: 'excel!Excel.ChartDataLabel#height:member'
     summary: |-
-      返回图表数据标签的高度，以磅为单位。 只读。 如果图表数据标签不可见，则为 Null。
+      返回图表数据标签的高度，以磅为单位。 如果图表数据标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -275,7 +275,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartDataLabel#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -296,7 +296,7 @@ items:
             - 'excel!Excel.ChartDataLabel:class'
   - uid: 'excel!Excel.ChartDataLabel#showBubbleSize:member'
     summary: |-
-      该布尔值表示数据标签气泡大小是否可见。
+      指定数据标签气泡大小是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
@@ -311,7 +311,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showCategoryName:member'
     summary: |-
-      表示数据标签分类名称是否可见的布尔值。
+      指定数据标签类别名称是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
@@ -326,7 +326,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showLegendKey:member'
     summary: |-
-      该布尔值表示数据标签图例标示是否可见。
+      指定数据标签图例标示是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
@@ -341,7 +341,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showPercentage:member'
     summary: |-
-      该布尔值表示数据标签百分比是否可见。
+      指定数据标签百分比是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
@@ -356,7 +356,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showSeriesName:member'
     summary: |-
-      该布尔值表示数据标签系列名称是否可见。
+      指定数据标签系列名称是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
@@ -371,7 +371,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showValue:member'
     summary: |-
-      该布尔值表示数据标签值是否可见。
+      指定数据标签值是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
@@ -459,7 +459,7 @@ items:
           - 'excel!Excel.ChartDataLabel#verticalAlignment~0:complex'
   - uid: 'excel!Excel.ChartDataLabel#width:member'
     summary: |-
-      返回图表数据标签的宽度，以磅为单位。 只读。 如果图表数据标签不可见，则为 Null。
+      返回图表数据标签的宽度，以磅为单位。 如果图表数据标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -473,7 +473,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -503,7 +503,7 @@ references:
         fullName: ' | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelUpdateData:interface'
     name: Interfaces.ChartDataLabelUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartDataLabelData:interface'
     name: Excel.Interfaces.ChartDataLabelData
