--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartloadoptions.yml
@@ -83,7 +83,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
     summary: |-
-      表示 chart 对象的高度，以磅值表示。
+      指定 chart 对象的高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -128,7 +128,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
     summary: |-
-      表示 chart 对象的名称。
+      指定 chart 对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -158,7 +158,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
     summary: |-
-      表示指定图表的标题，包括标题的文本、可见性、位置和格式。
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -173,7 +173,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
     summary: |-
-      表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -188,7 +188,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
     summary: |-
-      表示 chart 对象的宽度，以磅值表示。
+      指定 chart 对象的宽度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
