--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.formatprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.formatprotectiondata.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.FormatProtectionData#locked:member'
   - uid: 'excel!Excel.Interfaces.FormatProtectionData#formulaHidden:member'
     summary: |-
-      表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。
+      指定 Excel 是否隐藏区域中单元格的公式。 指示整个区域不具有统一公式隐藏设置的空值。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
@@ -28,7 +28,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.FormatProtectionData#locked:member'
     summary: |-
-      指示 Excel 是否将对象中的单元格锁定。 指示整个区域不具有统一锁定设置的空值。
+      指定 Excel 是否锁定对象中的单元格。 指示整个区域不具有统一锁定设置的空值。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
