--- a/docs/docs-ref-autogen/excel_online/excel/excel.pivotlayout.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.pivotlayout.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PivotLayout#autoFormat:member'
@@ -40,7 +40,7 @@ items:
       - 'excel!Excel.PivotLayout#toJSON:member(1)'
   - uid: 'excel!Excel.PivotLayout#autoFormat:member'
     summary: |-
-      指定是否在刷新或移动字段时自动进行格式化
+      指定在刷新或移动域时是否自动设置格式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFormat
@@ -67,7 +67,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.PivotLayout#enableFieldList:member'
     summary: |-
-      指定是否可以 UI 中显示字段列表。
+      指定是否可以在 UI 中显示字段列表。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableFieldList
@@ -333,7 +333,7 @@ items:
                       }
   - uid: 'excel!Excel.PivotLayout#preserveFormatting:member'
     summary: |-
-      指定是否在通过透视、排序或更改页面字段项等操作来刷新或重新计算报表时保留格式。
+      指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时，是否保留格式设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: preserveFormatting
@@ -371,7 +371,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.PivotLayout#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -442,7 +442,7 @@ items:
             - '"Ascending" | "Descending"'
   - uid: 'excel!Excel.PivotLayout#showColumnGrandTotals:member'
     summary: |-
-      指定数据透视表报表是否显示列总计。
+      指定数据透视表是否显示列总计。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showColumnGrandTotals
@@ -457,7 +457,7 @@ items:
           - boolean
   - uid: 'excel!Excel.PivotLayout#showRowGrandTotals:member'
     summary: |-
-      指定数据透视表报表是否显示行总计。
+      指定数据透视表是否显示行的总计。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showRowGrandTotals
@@ -499,7 +499,7 @@ items:
           - 'excel!Excel.Interfaces.PivotLayoutData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -520,7 +520,7 @@ references:
     name: 'OfficeExtension.ClientResult<Excel.PivotItem[]>'
     fullName: 'OfficeExtension.ClientResult<Excel.PivotItem[]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -545,7 +545,7 @@ references:
     name: 'OfficeExtension.ClientResult<Excel.PivotItem[]>'
     fullName: 'OfficeExtension.ClientResult<Excel.PivotItem[]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -579,7 +579,7 @@ references:
     name: Excel.Interfaces.PivotLayoutLoadOptions
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData:interface'
     name: Interfaces.PivotLayoutUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.PivotLayout#setAutoSortOnCell~0:complex'
     name: Range | string
