commit bilingual contents

--- a/docs/docs-ref-autogen/word_1_3/word.yml
+++ b/docs/docs-ref-autogen/word_1_3/word.yml
@@ -150,7 +150,7 @@ items:
       - 'word!Word.UnderlineType:enum'
       - 'word!Word.VerticalAlignment:enum'
   - uid: 'word!Word.run:function(1)'
-    summary: '<span data-ttu-id="b0b08-101">使用以前创建的 API 对象的 RequestContext，执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="b0b08-101">Executes a batch script that performs actions on the Word object model, using the RequestContext of previously created API objects.</span></span>'
+    summary: 使用以前创建的 API 对象的 RequestContext，执行对 Word 对象模型执行操作的批处理脚本。
     name: 'Word.run(objects, batch)'
     fullName: 'Word.run(objects, batch)'
     langs:
@@ -164,17 +164,17 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '<span data-ttu-id="b0b08-102">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="b0b08-102">An array of previously created API objects.</span></span> <span data-ttu-id="b0b08-103">将验证该数组，以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="b0b08-103">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="b0b08-104">批处理将使用此共享 RequestContext，这意味着应用于这些对象的任何更改都将由 "context. sync （）" 选取。</span><span class="sxs-lookup"><span data-stu-id="b0b08-104">The batch will use this shared RequestContext, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象的数组。 将验证该数组，以确保所有对象都共享相同的上下文。 批处理将使用此共享 RequestContext，这意味着应用于这些对象的任何更改都将由 "context. sync （）" 选取。
           type:
             - 'word!Word.run~1:complex'
         - id: batch
-          description: '<span data-ttu-id="b0b08-105">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="b0b08-105">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="b0b08-106">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="b0b08-106">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="b0b08-107">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="b0b08-107">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。
           type:
             - 'word!Word.run~2:complex'
       typeParameters:
         - id: T
   - uid: 'word!Word.run:function(2)'
-    summary: '<span data-ttu-id="b0b08-108">使用以前创建的 API 对象的 RequestContext，执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="b0b08-108">Executes a batch script that performs actions on the Word object model, using the RequestContext of a previously created API object.</span></span> <span data-ttu-id="b0b08-109">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="b0b08-109">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用以前创建的 API 对象的 RequestContext，执行对 Word 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     name: 'Word.run(object, batch)'
     fullName: 'Word.run(object, batch)'
     langs:
@@ -188,23 +188,23 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="b0b08-110">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="b0b08-110">A previously created API object.</span></span> <span data-ttu-id="b0b08-111">批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。</span><span class="sxs-lookup"><span data-stu-id="b0b08-111">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象。 批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。
           type:
-            - 'word!OfficeExtension.ClientObject:class'
+            - 'office!OfficeExtension.ClientObject:class'
         - id: batch
-          description: '<span data-ttu-id="b0b08-112">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="b0b08-112">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="b0b08-113">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="b0b08-113">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="b0b08-114">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="b0b08-114">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。
           type:
             - 'word!Word.run~4:complex'
       typeParameters:
         - id: T
   - uid: 'word!Word.run:function(3)'
-    summary: '<span data-ttu-id="b0b08-115">使用新的 RequestContext 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="b0b08-115">Executes a batch script that performs actions on the Word object model, using a new RequestContext.</span></span> <span data-ttu-id="b0b08-116">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="b0b08-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用新的 RequestContext 执行对 Word 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     remarks: |-
-      <span data-ttu-id="b0b08-117">除了此签名之外，此方法还具有以下签名，使您可以使用以前创建的对象的请求上下文恢复：</span><span class="sxs-lookup"><span data-stu-id="b0b08-117">In addition to this signature, the method also has the following signatures, which allow you to resume using the request context of previously created objects:</span></span>
+      除了此签名之外，此方法还具有以下签名，使您可以使用以前创建的对象的请求上下文恢复：
 
-      <span data-ttu-id="b0b08-118">run<T>（Object： officeextension.error，batch：（Context： RequestContext） =</span><span class="sxs-lookup"><span data-stu-id="b0b08-118">run<T>(object: OfficeExtension.ClientObject, batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="b0b08-119">&gt;承诺<T>）：承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="b0b08-119">&gt; Promise<T>): Promise<T>;</span></span>
+      run<T>（Object： officeextension.error，batch：（Context： RequestContext） =<!-- -->&gt;承诺<T>）：承诺<T>;
 
-      <span data-ttu-id="b0b08-120">run<T>（对象： officeextension.error\[\]，batch：（context： RequestContext） =</span><span class="sxs-lookup"><span data-stu-id="b0b08-120">run<T>(objects: OfficeExtension.ClientObject\[\], batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="b0b08-121">&gt;承诺<T>）：承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="b0b08-121">&gt; Promise<T>): Promise<T>;</span></span>
+      run<T>（对象： officeextension.error\[\]，batch：（context： RequestContext） =<!-- -->&gt;承诺<T>）：承诺<T>;
     name: Word.run(batch)
     fullName: Word.run(batch)
     langs:
@@ -218,7 +218,7 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="b0b08-122">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="b0b08-122">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="b0b08-123">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="b0b08-123">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="b0b08-124">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="b0b08-124">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。
           type:
             - 'word!Word.run~6:complex'
       typeParameters:
@@ -485,7 +485,7 @@ references:
     name: 'OfficeExtension.ClientObject[]'
     fullName: 'OfficeExtension.ClientObject[]'
     spec.typeScript:
-      - uid: 'word!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: '[]'
@@ -515,7 +515,7 @@ references:
         fullName: Promise
       - name: <T>
         fullName: <T>
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.run~4:complex'
     name: '(context: Word.RequestContext) => Promise<T>'
