--- a/docs/docs-ref-autogen/excel/excel/excel.datavalidationprompt.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.datavalidationprompt.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.DataValidationPrompt:interface'
     summary: |-
-      <span data-ttu-id="b3f0a-101">表示数据验证的用户提示属性。</span><span class="sxs-lookup"><span data-stu-id="b3f0a-101">Represents the user prompt properties for the data validation.</span></span>
+      表示数据验证的用户提示属性。
 
-      <span data-ttu-id="b3f0a-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3f0a-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.DataValidationPrompt
     fullName: Excel.DataValidationPrompt
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.DataValidationPrompt#title:member'
   - uid: 'excel!Excel.DataValidationPrompt#message:member'
     summary: |-
-      <span data-ttu-id="b3f0a-103">表示提示消息。</span><span class="sxs-lookup"><span data-stu-id="b3f0a-103">Represents the message of the prompt.</span></span>
+      指定提示的消息。
 
-      <span data-ttu-id="b3f0a-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3f0a-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: message
     fullName: message
     langs:
@@ -32,9 +32,9 @@ items:
           - string
   - uid: 'excel!Excel.DataValidationPrompt#showPrompt:member'
     summary: |-
-      <span data-ttu-id="b3f0a-105">确定在用户选择具有数据有效性的单元格时是否显示提示。</span><span class="sxs-lookup"><span data-stu-id="b3f0a-105">Determines whether or not to show the prompt when user selects a cell with data validation.</span></span>
+      指定当用户选择包含数据验证的单元格时是否显示提示。
 
-      <span data-ttu-id="b3f0a-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3f0a-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPrompt
     fullName: showPrompt
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.DataValidationPrompt#title:member'
     summary: |-
-      <span data-ttu-id="b3f0a-107">表示提示标题。</span><span class="sxs-lookup"><span data-stu-id="b3f0a-107">Represents the title for the prompt.</span></span>
+      指定提示的标题。
 
-      <span data-ttu-id="b3f0a-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3f0a-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
