--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.iterativecalculationdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.iterativecalculationdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.IterativeCalculationData:interface'
-    summary: <span data-ttu-id="56c92-101">描述通过调用返回的数据的接口`iterativeCalculation.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="56c92-101">An interface describing the data returned by calling `iterativeCalculation.toJSON()`</span></span><!-- --><span data-ttu-id="56c92-102">.</span><span class="sxs-lookup"><span data-stu-id="56c92-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`iterativeCalculation.toJSON()`<!-- -->.
     name: Excel.Interfaces.IterativeCalculationData
     fullName: Excel.Interfaces.IterativeCalculationData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.IterativeCalculationData#maxIteration:member'
   - uid: 'excel!Excel.Interfaces.IterativeCalculationData#enabled:member'
     summary: |-
-      <span data-ttu-id="56c92-103">如果 Excel 使用迭代来处理循环引用，则为 True。</span><span class="sxs-lookup"><span data-stu-id="56c92-103">True if Excel will use iteration to resolve circular references.</span></span>
+      如果 Excel 使用迭代来处理循环引用，则为 True。
 
-      <span data-ttu-id="56c92-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="56c92-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enabled
     fullName: enabled
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IterativeCalculationData#maxChange:member'
     summary: |-
-      <span data-ttu-id="56c92-105">返回或设置 Excel 处理循环引用时迭代之间的最大变化值。</span><span class="sxs-lookup"><span data-stu-id="56c92-105">Returns or sets the maximum amount of change between each iteration as Excel resolves circular references.</span></span>
+      指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
 
-      <span data-ttu-id="56c92-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="56c92-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxChange
     fullName: maxChange
     langs:
@@ -44,9 +44,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.IterativeCalculationData#maxIteration:member'
     summary: |-
-      <span data-ttu-id="56c92-107">返回或设置 Excel 处理循环引用的最大迭代次数。</span><span class="sxs-lookup"><span data-stu-id="56c92-107">Returns or sets the maximum number of iterations that Excel can use to resolve a circular reference.</span></span>
+      指定 Excel 可用于解析循环引用的最大迭代次数。
 
-      <span data-ttu-id="56c92-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="56c92-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxIteration
     fullName: maxIteration
     langs:
