--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tablecolumndata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tablecolumndata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableColumnData:interface'
-    summary: <span data-ttu-id="29636-101">描述通过调用返回的数据的接口`tableColumn.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="29636-101">An interface describing the data returned by calling `tableColumn.toJSON()`</span></span><!-- --><span data-ttu-id="29636-102">.</span><span class="sxs-lookup"><span data-stu-id="29636-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`tableColumn.toJSON()`<!-- -->.
     name: Excel.Interfaces.TableColumnData
     fullName: Excel.Interfaces.TableColumnData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.TableColumnData#values:member'
   - uid: 'excel!Excel.Interfaces.TableColumnData#id:member'
     summary: |-
-      <span data-ttu-id="29636-103">返回标识表内的列的唯一键。</span><span class="sxs-lookup"><span data-stu-id="29636-103">Returns a unique key that identifies the column within the table.</span></span> <span data-ttu-id="29636-104">只读。</span><span class="sxs-lookup"><span data-stu-id="29636-104">Read-only.</span></span>
+      返回标识表内的列的唯一键。
 
-      <span data-ttu-id="29636-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29636-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -30,9 +30,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TableColumnData#index:member'
     summary: |-
-      <span data-ttu-id="29636-106">返回表的列集合内列的索引编号。</span><span class="sxs-lookup"><span data-stu-id="29636-106">Returns the index number of the column within the columns collection of the table.</span></span> <span data-ttu-id="29636-107">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="29636-107">Zero-indexed.</span></span> <span data-ttu-id="29636-108">只读。</span><span class="sxs-lookup"><span data-stu-id="29636-108">Read-only.</span></span>
+      返回表的列集合内列的索引编号。 从零开始编制索引。
 
-      <span data-ttu-id="29636-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29636-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -45,9 +45,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TableColumnData#name:member'
     summary: |-
-      <span data-ttu-id="29636-110">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="29636-110">Represents the name of the table column.</span></span>
+      指定表格列的名称。
 
-      <span data-ttu-id="29636-111">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="29636-111">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="29636-112">\]</span><span class="sxs-lookup"><span data-stu-id="29636-112"></span></span>
+      \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: name
     fullName: name
     langs:
@@ -60,9 +60,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableColumnData#values:member'
     summary: |-
-      <span data-ttu-id="29636-113">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="29636-113">Represents the raw values of the specified range.</span></span> <span data-ttu-id="29636-114">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="29636-114">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="29636-115">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="29636-115">Cells that contain an error will return the error string.</span></span>
+      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="29636-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29636-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
