--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.application.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.application.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.Application:class'
     summary: |-
-      <span data-ttu-id="c52d4-101">表示用于管理工作簿的 Excel 应用程序。</span><span class="sxs-lookup"><span data-stu-id="c52d4-101">Represents the Excel application that manages the workbook.</span></span>
+      表示用于管理工作簿的 Excel 应用程序。
 
-      <span data-ttu-id="c52d4-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c52d4-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Application
     fullName: Excel.Application
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Application#calculate:member(1)'
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.Application#toJSON:member(1)'
   - uid: 'excel!Excel.Application#calculate:member(1)'
     summary: |-
-      <span data-ttu-id="c52d4-103">重新计算 Excel 中当前打开的所有工作簿。</span><span class="sxs-lookup"><span data-stu-id="c52d4-103">Recalculate all currently opened workbooks in Excel.</span></span>
+      重新计算 Excel 中当前打开的所有工作簿。
 
-      <span data-ttu-id="c52d4-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c52d4-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculate(calculationType)
     fullName: calculate(calculationType)
     langs:
@@ -43,14 +43,14 @@ items:
         description: ''
       parameters:
         - id: calculationType
-          description: <span data-ttu-id="c52d4-105">指定要使用的计算类型。</span><span class="sxs-lookup"><span data-stu-id="c52d4-105">Specifies the calculation type to use.</span></span> <span data-ttu-id="c52d4-106">有关详细信息，请参阅 CalculationType。</span><span class="sxs-lookup"><span data-stu-id="c52d4-106">See Excel.CalculationType for details.</span></span>
+          description: 指定要使用的计算类型。 有关详细信息，请参阅 CalculationType。
           type:
             - 'excel!Excel.CalculationType:enum'
   - uid: 'excel!Excel.Application#calculate:member(2)'
     summary: |-
-      <span data-ttu-id="c52d4-107">重新计算 Excel 中当前打开的所有工作簿。</span><span class="sxs-lookup"><span data-stu-id="c52d4-107">Recalculate all currently opened workbooks in Excel.</span></span>
+      重新计算 Excel 中当前打开的所有工作簿。
 
-      <span data-ttu-id="c52d4-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c52d4-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculate(calculationTypeString)
     fullName: calculate(calculationTypeString)
     langs:
@@ -64,7 +64,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="c52d4-109">示例</span><span class="sxs-lookup"><span data-stu-id="c52d4-109">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) {
@@ -79,14 +79,14 @@ items:
           ```
       parameters:
         - id: calculationTypeString
-          description: <span data-ttu-id="c52d4-110">指定要使用的计算类型。</span><span class="sxs-lookup"><span data-stu-id="c52d4-110">Specifies the calculation type to use.</span></span> <span data-ttu-id="c52d4-111">有关详细信息，请参阅 CalculationType。</span><span class="sxs-lookup"><span data-stu-id="c52d4-111">See Excel.CalculationType for details.</span></span>
+          description: 指定要使用的计算类型。 有关详细信息，请参阅 CalculationType。
           type:
             - '"Recalculate" | "Full" | "FullRebuild"'
   - uid: 'excel!Excel.Application#calculationMode:member'
     summary: |-
-      <span data-ttu-id="c52d4-112">返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="c52d4-112">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="c52d4-113">可能的值包括：`Automatic`</span><span class="sxs-lookup"><span data-stu-id="c52d4-113">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="c52d4-114">，Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="c52d4-114">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="c52d4-115">，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="c52d4-115">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="c52d4-116">，在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="c52d4-116">, where calculation is done when the user requests it.</span></span>
+      返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。 可能的值包括：`Automatic`<!-- -->，Excel 控制重新计算的位置;`AutomaticExceptTables`<!-- -->，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`<!-- -->，在用户请求计算时完成计算。
 
-      <span data-ttu-id="c52d4-117">\[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c52d4-117">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationMode
     fullName: calculationMode
     langs:
@@ -98,7 +98,7 @@ items:
         type:
           - 'excel!Excel.Application#calculationMode~0:complex'
   - uid: 'excel!Excel.Application#context:member'
-    summary: <span data-ttu-id="c52d4-118">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="c52d4-118">The request context associated with the object.</span></span> <span data-ttu-id="c52d4-119">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="c52d4-119">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -110,7 +110,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Application#load:member(1)'
-    summary: <span data-ttu-id="c52d4-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c52d4-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c52d4-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -124,11 +124,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="c52d4-122">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="c52d4-122">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
   - uid: 'excel!Excel.Application#load:member(2)'
-    summary: <span data-ttu-id="c52d4-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c52d4-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c52d4-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -142,7 +142,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="c52d4-125">示例</span><span class="sxs-lookup"><span data-stu-id="c52d4-125">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) {
@@ -160,11 +160,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="c52d4-126">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-126">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Application#load:member(3)'
-    summary: <span data-ttu-id="c52d4-127">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-127">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c52d4-128">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c52d4-128">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -182,7 +182,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="c52d4-129">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-129">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -190,9 +190,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.Application#set:member(1)'
-    summary: '<span data-ttu-id="c52d4-130">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-130">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="c52d4-131">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="c52d4-131">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="c52d4-132">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="c52d4-132">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.Application): void`
     name: 'set(properties, options)'
@@ -208,15 +208,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="c52d4-133">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-133">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ApplicationUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="c52d4-134">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="c52d4-134">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Application#set:member(2)'
-    summary: '<span data-ttu-id="c52d4-135">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="c52d4-135">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -235,9 +235,9 @@ items:
             - 'excel!Excel.Application:class'
   - uid: 'excel!Excel.Application#suspendApiCalculationUntilNextSync:member(1)'
     summary: |-
-      <span data-ttu-id="c52d4-p109">在下一次调用“context.sync()”前暂停计算。设置后，开发者负责重新计算工作簿，以确保传播所有依赖项。</span><span class="sxs-lookup"><span data-stu-id="c52d4-p109">Suspends calculation until the next "context.sync()" is called. Once set, it is the developer's responsibility to re-calc the workbook, to ensure that any dependencies are propagated.</span></span>
+      在下一次调用“context.sync()”前暂停计算。设置后，开发者负责重新计算工作簿，以确保传播所有依赖项。
 
-      <span data-ttu-id="c52d4-138">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c52d4-138">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: suspendApiCalculationUntilNextSync()
     fullName: suspendApiCalculationUntilNextSync()
     langs:
@@ -250,7 +250,7 @@ items:
           - void
         description: ''
   - uid: 'excel!Excel.Application#toJSON:member(1)'
-    summary: '<span data-ttu-id="c52d4-139">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="c52d4-139">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="c52d4-140">.</span><span class="sxs-lookup"><span data-stu-id="c52d4-140"></span></span> <span data-ttu-id="c52d4-141">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="c52d4-141"></span></span><!-- --><span data-ttu-id="c52d4-142">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 应用程序对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.ApplicationData`</span><span class="sxs-lookup"><span data-stu-id="c52d4-142">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.Application object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ApplicationData`</span></span><!-- --><span data-ttu-id="c52d4-143">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="c52d4-143">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 应用程序对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.ApplicationData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -263,7 +263,7 @@ items:
           - 'excel!Excel.Interfaces.ApplicationData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.CalculationType:enum'
     name: Excel.CalculationType
@@ -284,7 +284,7 @@ references:
     name: Excel.Interfaces.ApplicationLoadOptions
   - uid: 'excel!Excel.Interfaces.ApplicationUpdateData:interface'
     name: Interfaces.ApplicationUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ApplicationData:interface'
     name: Excel.Interfaces.ApplicationData
