--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkword.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkword.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'onenote!OneNote.InkWord:class'
     summary: |-
-      <span data-ttu-id="8b0c5-101">段落字词中的墨迹容器。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-101">A container for the ink in a word in a paragraph.</span></span>
+      段落字词中的墨迹容器。
 
-      <span data-ttu-id="8b0c5-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b0c5-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.InkWord
     fullName: OneNote.InkWord
     langs:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.InkWord#context:member'
@@ -26,7 +26,7 @@ items:
       - 'onenote!OneNote.InkWord#untrack:member(1)'
       - 'onenote!OneNote.InkWord#wordAlternates:member'
   - uid: 'onenote!OneNote.InkWord#context:member'
-    summary: <span data-ttu-id="8b0c5-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-103">The request context associated with the object.</span></span> <span data-ttu-id="8b0c5-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -39,9 +39,9 @@ items:
           - 'onenote!OneNote.RequestContext:class'
   - uid: 'onenote!OneNote.InkWord#id:member'
     summary: |-
-      <span data-ttu-id="8b0c5-105">获取 InkWord 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-105">Gets the ID of the InkWord object.</span></span> <span data-ttu-id="8b0c5-106">只读。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-106">Read-only.</span></span>
+      获取 InkWord 对象的 ID。 只读。
 
-      <span data-ttu-id="8b0c5-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b0c5-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -54,9 +54,9 @@ items:
           - string
   - uid: 'onenote!OneNote.InkWord#languageId:member'
     summary: |-
-      <span data-ttu-id="8b0c5-108">该墨迹字词中已识别语言的 ID。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-108">The id of the recognized language in this ink word.</span></span> <span data-ttu-id="8b0c5-109">只读。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-109">Read-only.</span></span>
+      该墨迹字词中已识别语言的 ID。 只读。
 
-      <span data-ttu-id="8b0c5-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b0c5-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: languageId
     fullName: languageId
     langs:
@@ -68,15 +68,15 @@ items:
         type:
           - string
   - uid: 'onenote!OneNote.InkWord#load:member(1)'
-    summary: <span data-ttu-id="8b0c5-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8b0c5-112">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-112">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="8b0c5-113">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="8b0c5-113">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="8b0c5-114">`load(option?: string | string[]): OneNote.InkWord`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-114">`load(option?: string | string[]): OneNote.InkWord` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): OneNote.InkWord`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="8b0c5-115">`load(option?: { select?: string; expand?: string; }): OneNote.InkWord`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-115">`load(option?: { select?: string; expand?: string; }): OneNote.InkWord` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): OneNote.InkWord`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="8b0c5-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkWord`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkWord` - Only available on collection types.</span></span> <span data-ttu-id="8b0c5-117">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-117">It is similar to the preceding signature.</span></span> <span data-ttu-id="8b0c5-118">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-118">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="8b0c5-119">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-119">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="8b0c5-120">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-120">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkWord`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -94,7 +94,7 @@ items:
           type:
             - 'onenote!OneNote.Interfaces.InkWordLoadOptions:interface'
   - uid: 'onenote!OneNote.InkWord#load:member(2)'
-    summary: <span data-ttu-id="8b0c5-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8b0c5-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -108,11 +108,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="8b0c5-123">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-123">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'onenote!OneNote.InkWord#load:member(3)'
-    summary: <span data-ttu-id="8b0c5-124">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-124">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8b0c5-125">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-125">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -126,14 +126,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="8b0c5-126">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-126">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'onenote!OneNote.InkWord#paragraph:member'
     summary: |-
-      <span data-ttu-id="8b0c5-127">包含墨迹字词的父段落。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-127">The parent paragraph containing the ink word.</span></span> <span data-ttu-id="8b0c5-128">只读。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-128">Read-only.</span></span>
+      包含墨迹字词的父段落。 只读。
 
-      <span data-ttu-id="8b0c5-129">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b0c5-129">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: paragraph
     fullName: paragraph
     langs:
@@ -145,7 +145,7 @@ items:
         type:
           - 'onenote!OneNote.Paragraph:class'
   - uid: 'onenote!OneNote.InkWord#toJSON:member(1)'
-    summary: '<span data-ttu-id="8b0c5-130">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="8b0c5-130">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="8b0c5-131">.</span><span class="sxs-lookup"><span data-stu-id="8b0c5-131"></span></span> <span data-ttu-id="8b0c5-132">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="8b0c5-132"></span></span><!-- --><span data-ttu-id="8b0c5-133">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 InkWord 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkWordData`</span><span class="sxs-lookup"><span data-stu-id="8b0c5-133">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original OneNote.InkWord object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `OneNote.Interfaces.InkWordData`</span></span><!-- --><span data-ttu-id="8b0c5-134">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-134">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 InkWord 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkWordData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -158,7 +158,7 @@ items:
           - 'onenote!OneNote.Interfaces.InkWordData:interface'
         description: ''
   - uid: 'onenote!OneNote.InkWord#track:member(1)'
-    summary: '<span data-ttu-id="8b0c5-135">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-135">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="8b0c5-136">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-136">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="8b0c5-137">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-137">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -171,7 +171,7 @@ items:
           - 'onenote!OneNote.InkWord:class'
         description: ''
   - uid: 'onenote!OneNote.InkWord#untrack:member(1)'
-    summary: '<span data-ttu-id="8b0c5-138">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-138">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="8b0c5-139">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-139">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="8b0c5-140">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-140">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="8b0c5-141">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-141">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
@@ -185,9 +185,9 @@ items:
         description: ''
   - uid: 'onenote!OneNote.InkWord#wordAlternates:member'
     summary: |-
-      <span data-ttu-id="8b0c5-142">按照可能性的顺序，已在此墨迹字词中识别的字词。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-142">The words that were recognized in this ink word, in order of likelihood.</span></span> <span data-ttu-id="8b0c5-143">只读。</span><span class="sxs-lookup"><span data-stu-id="8b0c5-143">Read-only.</span></span>
+      按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
 
-      <span data-ttu-id="8b0c5-144">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b0c5-144">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: wordAlternates
     fullName: wordAlternates
     langs:
@@ -199,7 +199,7 @@ items:
         type:
           - 'string[]'
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.RequestContext:class'
     name: RequestContext
