commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangefontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangefontloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="b8d83-101">此对象表示对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="b8d83-101">This object represents the font attributes (font name, font size, color, etc.) for an object.</span></span>
+      此对象表示对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="b8d83-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.RangeFontLoadOptions
     fullName: Excel.Interfaces.RangeFontLoadOptions
     langs:
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.RangeFontLoadOptions#size:member'
       - 'excel!Excel.Interfaces.RangeFontLoadOptions#underline:member'
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#$all:member'
-    summary: '<span data-ttu-id="b8d83-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="b8d83-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="b8d83-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="b8d83-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="b8d83-105">).</span><span class="sxs-lookup"><span data-stu-id="b8d83-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#bold:member'
     summary: |-
-      <span data-ttu-id="b8d83-106">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="b8d83-106">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="b8d83-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="b8d83-108">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="b8d83-108">HTML color code representation of the text color.</span></span> <span data-ttu-id="b8d83-109">例如，</span><span class="sxs-lookup"><span data-stu-id="b8d83-109">E.g.</span></span> <span data-ttu-id="b8d83-110">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="b8d83-110">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="b8d83-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#italic:member'
     summary: |-
-      <span data-ttu-id="b8d83-112">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="b8d83-112">Represents the italic status of the font.</span></span>
+      指定字体的斜体状态。
 
-      <span data-ttu-id="b8d83-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -78,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="b8d83-114">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="b8d83-114">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="b8d83-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -93,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#size:member'
     summary: |-
-      <span data-ttu-id="b8d83-116">字号</span><span class="sxs-lookup"><span data-stu-id="b8d83-116">Font size.</span></span>
+      字号
 
-      <span data-ttu-id="b8d83-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#underline:member'
     summary: |-
-      <span data-ttu-id="b8d83-118">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="b8d83-118">Type of underline applied to the font.</span></span> <span data-ttu-id="b8d83-119">有关详细信息，请参阅 RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="b8d83-119">See Excel.RangeUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 RangeUnderlineStyle。
 
-      <span data-ttu-id="b8d83-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8d83-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
