--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d93d1-101">表示工作簿中的 chart 对象。</span><span class="sxs-lookup"><span data-stu-id="d93d1-101">Represents a chart object in a workbook.</span></span> <span data-ttu-id="d93d1-102">若要了解有关 Chart 对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理图表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-charts)</span><span class="sxs-lookup"><span data-stu-id="d93d1-102">To learn more about the Chart object model, see [Work with charts using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-charts)</span></span><!-- --><span data-ttu-id="d93d1-103">.</span><span class="sxs-lookup"><span data-stu-id="d93d1-103"></span></span>
+      表示工作簿中的 chart 对象。 若要了解有关 Chart 对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理图表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-charts)<!-- -->.
 
-      <span data-ttu-id="d93d1-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLoadOptions
     fullName: Excel.Interfaces.ChartLoadOptions
     langs:
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
       - 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#$all:member'
-    summary: '<span data-ttu-id="d93d1-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d93d1-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d93d1-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d93d1-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d93d1-107">).</span><span class="sxs-lookup"><span data-stu-id="d93d1-107"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -38,9 +38,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#axes:member'
     summary: |-
-      <span data-ttu-id="d93d1-108">表示图表坐标轴。</span><span class="sxs-lookup"><span data-stu-id="d93d1-108">Represents chart axes.</span></span>
+      表示图表坐标轴。
 
-      <span data-ttu-id="d93d1-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#dataLabels:member'
     summary: |-
-      <span data-ttu-id="d93d1-110">表示图表上的数据标签。</span><span class="sxs-lookup"><span data-stu-id="d93d1-110">Represents the datalabels on the chart.</span></span>
+      表示图表上的数据标签。
 
-      <span data-ttu-id="d93d1-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="d93d1-112">封装图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="d93d1-112">Encapsulates the format properties for the chart area.</span></span>
+      封装图表区域的格式属性。
 
-      <span data-ttu-id="d93d1-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -83,9 +83,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="d93d1-114">表示 chart 对象的高度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="d93d1-114">Represents the height, in points, of the chart object.</span></span>
+      指定 chart 对象的高度（以磅为单位）。
 
-      <span data-ttu-id="d93d1-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -98,9 +98,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="d93d1-116">从图表左侧到工作表原点的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="d93d1-116">The distance, in points, from the left side of the chart to the worksheet origin.</span></span>
+      从图表左侧到工作表原点的距离，以磅值表示。
 
-      <span data-ttu-id="d93d1-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -113,9 +113,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#legend:member'
     summary: |-
-      <span data-ttu-id="d93d1-118">表示图表的图例。</span><span class="sxs-lookup"><span data-stu-id="d93d1-118">Represents the legend for the chart.</span></span>
+      表示图表的图例。
 
-      <span data-ttu-id="d93d1-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -128,9 +128,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="d93d1-120">表示 chart 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="d93d1-120">Represents the name of a chart object.</span></span>
+      指定 chart 对象的名称。
 
-      <span data-ttu-id="d93d1-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -143,9 +143,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#series:member'
     summary: |-
-      <span data-ttu-id="d93d1-122">表示单个系列或图表中的系列集合。</span><span class="sxs-lookup"><span data-stu-id="d93d1-122">Represents either a single series or collection of series in the chart.</span></span>
+      表示单个系列或图表中的系列集合。
 
-      <span data-ttu-id="d93d1-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
     fullName: series
     langs:
@@ -158,9 +158,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="d93d1-124">表示指定图表的标题，包括标题的文本、可见性、位置和格式。</span><span class="sxs-lookup"><span data-stu-id="d93d1-124">Represents the title of the specified chart, including the text, visibility, position, and formatting of the title.</span></span>
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
-      <span data-ttu-id="d93d1-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -173,9 +173,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="d93d1-126">表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="d93d1-126">Represents the distance, in points, from the top edge of the object to the top of row 1 (on a worksheet) or the top of the chart area (on a chart).</span></span>
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      <span data-ttu-id="d93d1-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -188,9 +188,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="d93d1-128">表示 chart 对象的宽度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="d93d1-128">Represents the width, in points, of the chart object.</span></span>
+      指定 chart 对象的宽度（以磅为单位）。
 
-      <span data-ttu-id="d93d1-129">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d93d1-129">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
