--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.tablecolumnloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.tablecolumnloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="489c6-101">代表表格中的一列。</span><span class="sxs-lookup"><span data-stu-id="489c6-101">Represents a column in a table.</span></span>
+      代表表格中的一列。
 
-      <span data-ttu-id="489c6-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="489c6-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableColumnLoadOptions
     fullName: Excel.Interfaces.TableColumnLoadOptions
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
       - 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#$all:member'
-    summary: '<span data-ttu-id="489c6-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="489c6-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="489c6-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="489c6-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="489c6-105">).</span><span class="sxs-lookup"><span data-stu-id="489c6-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#filter:member'
     summary: |-
-      <span data-ttu-id="489c6-106">检索应用于列的筛选器。</span><span class="sxs-lookup"><span data-stu-id="489c6-106">Retrieve the filter applied to the column.</span></span>
+      检索应用于列的筛选器。
 
-      <span data-ttu-id="489c6-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="489c6-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filter
     fullName: filter
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.FilterLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="489c6-108">返回标识表内的列的唯一键。</span><span class="sxs-lookup"><span data-stu-id="489c6-108">Returns a unique key that identifies the column within the table.</span></span> <span data-ttu-id="489c6-109">只读。</span><span class="sxs-lookup"><span data-stu-id="489c6-109">Read-only.</span></span>
+      返回标识表内的列的唯一键。
 
-      <span data-ttu-id="489c6-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="489c6-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="489c6-111">返回表的列集合内列的索引编号。</span><span class="sxs-lookup"><span data-stu-id="489c6-111">Returns the index number of the column within the columns collection of the table.</span></span> <span data-ttu-id="489c6-112">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="489c6-112">Zero-indexed.</span></span> <span data-ttu-id="489c6-113">只读。</span><span class="sxs-lookup"><span data-stu-id="489c6-113">Read-only.</span></span>
+      返回表的列集合内列的索引编号。 从零开始编制索引。
 
-      <span data-ttu-id="489c6-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="489c6-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="489c6-115">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="489c6-115">Represents the name of the table column.</span></span>
+      指定表格列的名称。
 
-      <span data-ttu-id="489c6-116">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="489c6-116">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="489c6-117">\]</span><span class="sxs-lookup"><span data-stu-id="489c6-117"></span></span>
+      \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: name
     fullName: name
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
     summary: |-
-      <span data-ttu-id="489c6-118">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="489c6-118">Represents the raw values of the specified range.</span></span> <span data-ttu-id="489c6-119">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="489c6-119">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="489c6-120">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="489c6-120">Cells that contain an error will return the error string.</span></span>
+      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="489c6-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="489c6-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
